<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CLIP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_add">Add</string>
    <string name="action_update">Update</string>
    <string name="title_activity_career_menu">Career Menu</string>
    <string name="button_goal">Goals</string>
    <string name="button_jobApp">Job Applications</string>
    <string name="button_compInfo">Company Information</string>
    <string name="button_eId">Electronic ID</string>
    <string name="button_contact">Contacts</string>
    <string name="title_activity_career_goal">List of Career Goals</string>
    <string name="title_activity_career_goal_detail">Details on Goal</string>
    <string name="button_login">Login</string>
    <string name="checkcontent">Check Content</string>
    <string name="title_activity_entry">Main Menu</string>
    <string name="username_title">Enter your Username here</string>
    <string name="password_title">Enter your Password here</string>
    <string name="button_register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="button_career">Career</string>
    <string name="none">None</string>
    <string name="title_activity_career_goal_edit">Editing Goal</string>
    <string name="goal_long">Long term goal.</string>
    <string name="goal_short">Short term goal.</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_career_job_app">Job Applications</string>
    <string name="title_activity_career_job_app_edit">Editting Application</string>
    <string name="title_activity_career_job_app_detail">Application Details</string>

    <string-array name="job_status">
        <item>Pending</item>
        <item>Interview Granted</item>
        <item>Accepted</item>
        <item>Rejected</item>
    </string-array>
    <string-array name="education_financeType">
        <item>Loan</item>
        <item>Scholarship</item>
        <item>Grant</item>
        <item>Information</item>
    </string-array>
    <string-array name="education_futureType">
        <item>Continuing Education</item>
        <item>Other</item>
    </string-array>
    <string-array name="educationGraduate_actionType">
        <item>In consideration</item>
        <item>Applied</item>
    </string-array>
    <string-array name="educationGraduate_planType">
        <item>Part-time</item>
        <item>Full-time</item>
    </string-array>
    <string-array name="educationGraduate_degreeType">
        <item>Masters</item>
        <item>Doctorate</item>
    </string-array>
    <string-array name="educationCurrent_degreeType">
        <item>Bachelors</item>
        <item>GED</item>
        <item>Associates</item>
        <item>Masters</item>
        <item>Doctorate</item>
    </string-array>

    <string name="title_activity_finance_asset">Assets</string>
    <string name="title_activity_finance_asset_detail">Assets</string>
    <string name="title_activity_finance_asset_edit">Asset Editing</string>
    <string name="title_activity_finance_goal">Financial Goals</string>
    <string name="title_activity_finance_stock">Stocks and Securities</string>
    <string name="title_activity_finance_stock_detail">Stocks and Securities</string>
    <string name="title_activity_finance_stock_edit">Stocks and Securities</string>
    <string name="title_activity_finance_liability">Liabilities</string>
    <string name="title_activity_finance_liability_detail">Liabilities</string>
    <string name="title_activity_finance_liability_edit">Liabilities</string>
    <string name="title_activity_finance_menu">Finance</string>
    <string name="title_activity_finance_goal_detail">Financial Goals</string>
    <string name="title_activity_finance_goal_edit">Financial Goals</string>
    <string name="title_activity_finance_creditcard">Credit Card</string>
    <string name="title_activity_finance_creditcard_detail">Credit Card Information</string>
    <string name="title_activity_finance_creditcard_edit">Credit Card Information</string>

    <string-array name="healthDiet_type">
        <item>Low Carb</item>
        <item>Vegetarian</item>
        <item>Low Calorie</item>
        <item>Low Fat</item>
        <item>Crash</item>
        <item>Detox</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_login">Welcome to CLIP</string>
    <string name="title_activity_career_comp_info">Company Information</string>
    <string name="title_activity_career_comp_info_edit">Editing Company Info</string>
    <string name="title_activity_career_comp_info_detail">Company Details</string>
    <string name="title_activity_career_contact">Business Contacts</string>
    <string name="title_activity_career_contact_edit">Editing Contact</string>
    <string name="title_activity_career_contact_detail">Contact Details</string>
    <string name="title_activity_education_finance">Educational Finances</string>
    <string name="title_activity_education_menu">Education Menu</string>
    <string name="title_activity_education_finance_edit">Editing Educational Finance</string>
    <string name="title_activity_education_finance_detail">Financial Details</string>
    <string name="title_activity_education_future">Future Educations</string>
    <string name="title_activity_education_future_edit">Editing Future Education</string>
    <string name="title_activity_education_future_detail">Future Education Details</string>
    <string name="title_activity_education_graduate">Graduate Plans</string>
    <string name="title_activity_education_graduate_edit">Editing Graduate Plan</string>
    <string name="title_activity_education_graduate_detail">Graduate Plan Deatails</string>
    <string name="title_activity_education_current">Current Educations</string>
    <string name="title_activity_education_current_edit">Editing Current Education Info</string>
    <string name="title_activity_education_current_detail">Current Education Details</string>
    <string name="title_activity_health_menu">Health Menu</string>
    <string name="title_activity_health_vital">Vital Signs</string>
    <string name="title_activity_health_vital_edit">Editing Vital Signs</string>
    <string name="title_activity_health_exercise">Exercises</string>
    <string name="title_activity_health_exercise_edit">Editing Exercise</string>
    <string name="title_activity_health_exercise_detail">Exercise Detail</string>
    <string name="title_activity_health_diet">Diet</string>
    <string name="title_activity_health_diet_edit">Editing Diet</string>
    <string name="title_activity_health_diet_detail">Diet Details</string>
    <string name="title_activity_health_checkup">HealthCheckup</string>
    <string name="title_activity_health_checkup_edit">HealthCheckupEdit</string>
    <string name="title_activity_health_checkup_detail">HealthCheckupDetail</string>
    <string name="title_activity_health_medication">HealthMedication</string>
    <string name="title_activity_health_medication_edit">HealthMedicationEdit</string>
    <string name="title_activity_health_medication_detail">HealthMedicationDetail</string>
    <string name="title_activity_health_allergy">HealthAllergy</string>
    <string name="title_activity_health_recipe">HealthRecipe</string>
    <string name="title_activity_health_recipe_edit">HealthRecipeEdit</string>
    <string name="title_activity_health_recipe_detail">HealthRecipeDetail</string>
    <string name="title_activity_health_allergy_edit">HealthAllergyEdit</string>
    <string name="title_activity_career_eid">CareerEid</string>
    <string name="title_activity_career_eid_edit">CareerEidEdit</string>
    <string name="title_activity_career_eid_detail">CareerEidDetail</string>
    <string name="title_activity_finance_summary">FinanceSummary</string>

</resources>
