<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.clip.Login" >

    <EditText
        android:id="@+id/userName"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/username_title"
        android:inputType="text|textPersonName"
        android:textSize="25dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passWord"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/userName"
        android:layout_below="@+id/userName"
        android:layout_marginTop="53dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/password_title"
        android:inputType="textPassword"
        android:textSize="25dp" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passWord"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/button_login" />

    <Button
        android:id="@+id/Register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LoginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/button_register" />

</RelativeLayout>